# adventofcode2023

./: .gitignore  pyproject.toml
adventofcode2023/: __init__.py  __main__.py  day.py  main.py
adventofcode2023/days/: __init__.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
adventofcode2023/tests/: test_day1.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day18.py  test_day3.py  test_day4.py  test_day8.py  test_day9.py  utils.py
adventofcode2023/tests/static/inputs/: example.day.9.1.txt
